--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,54 @@
+altair
+attrs
+blinker
+cachetools
+certifi
+charset-normalizer
+click
+colorama
+docopt
+et-xmlfile
+gitdb
+GitPython
+idna
+importlib-metadata
+Jinja2
+jsonschema
+jsonschema-specifications
+markdown-it-py
+MarkupSafe
+mdurl
+numpy
+openpyxl
+packaging
+pandas
+Pillow
+pipreqs
+protobuf
+pyarrow
+pydeck
+Pygments
+Pympler
+pyrsistent
+python-dateutil
+pytz
+pytz-deprecation-shim
+referencing
+requests
+rich
+rpds-py
+six
+smmap
 streamlit
+tenacity
+toml
+toolz
+tornado
+typing_extensions
+tzdata
+tzlocal
+urllib3
+validators
+watchdog
+yarg
+zipp
