Pre-save-Finalização_2

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,88 @@
-streamlit
+certifi
+pytz
+tzdata
+setuptools
+pip
+packaging
+attrs
+rich
+pyarrow
+Pillow
+tenacity
+click
+importlib-metadata
+tornado
+PyYAML
+cachetools
+altair
+smmap
+tqdm
+fonttools
+protobuf
+jsonschema
+typing-extensions
+ImageHash
+tzlocal
+gitdb
+bcrypt
+zipp
 pymongo
-
+matplotlib
+python-decouple
+idna
+charset-normalizer
+pandas-profiling
+GitPython
+Jinja2
+openpyxl
+pyparsing
+networkx
+watchdog
+requests
+Pygments
+pydantic-core
+python-dateutil
+PyJWT
+dnspython
+pydantic
+markdown-it-py
+MarkupSafe
+pandas
+urllib3
+streamlit
+numpy
+six
+scipy
+multimethod
+blinker
+kiwisolver
+PyWavelets
+contourpy
+joblib
+et-xmlfile
+Pympler
+referencing
+validators
+pyrsistent
+seaborn
+phik
+cycler
+toolz
+rpds-py
+toml
+pydeck
+visions
+docopt
+annotated-types
+missingno
+pipreqs
+colorama
+streamlit-aggrid
+tangled-up-in-unicode
+extra-streamlit-components
+htmlmin
+yarg
+jsonschema-specifications
+mdurl
+pytz-deprecation-shim
+streamlit-authenticator
