--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,87 @@
+dropbox
+et-xmlfile
+extra-streamlit-components
+fonttools
+gitdb
+GitPython
+google-api-core
+google-api-python-client
+google-auth
+google-auth-httplib2
+googleapis-common-protos
+htmlmin
+httplib2
+idna
+ImageHash
+importlib-metadata
+Jinja2
+joblib
+jsonschema
+jsonschema-specifications
+kiwisolver
+markdown-it-py
+MarkupSafe
+matplotlib
+mdurl
+missingno
+multimethod
+networkx
+numpy
+oauth2client
+openpyxl
+packaging
+pandas
+pandas-profiling
+phik
+Pillow
+pipreqs
+ply
+protobuf
+pyarrow
+pyasn1
+pyasn1-modules
+pydantic
+pydantic_core
+pydeck
+PyDrive
+Pygments
+pymongo
+Pympler
+pyparsing
+pyrsistent
+python-dateutil
+python-decouple
+python-dotenv
+pytz
+pytz-deprecation-shim
+PyWavelets
+PyYAML
+referencing
+requests
+rich
+rpds-py
+rsa
+scipy
+seaborn
+six
+smmap
+stone
 streamlit
 streamlit-aggrid
-pymongo
-dropbox
-dotenv
+streamlit-modal
+tangled-up-in-unicode
+tenacity
+toml
+toolz
+tornado
+tqdm
+typing_extensions
+tzdata
+tzlocal
+uritemplate
+urllib3
+validators
+visions
+watchdog
+yarg
+zipp
