--- a/requirements.txt
+++ b/requirements.txt
@@ -62,7 +62,7 @@ MarkupSafe==2.1.3
 matplotlib==3.8.0
 mdurl==0.1.2
 mega==0.2.11
-mega.py==1.0.8
+mega.py
 missingno==0.5.2
 multimethod==1.10
 networkx==3.1
