--- a/requirements.txt
+++ b/requirements.txt
@@ -12,24 +12,23 @@ pyarrow
 pyee
 av
 Pillow
+tenacity
 click
 importlib-metadata
 tornado
 PyYAML
+plotly
 cachetools
-tenacity
 altair
 smmap
+dash-table
 tqdm
 fonttools
 protobuf
 jsonschema
 beautifulsoup4
 lxml
-plotly
-locale
 rsa
-babel
 typing-extensions
 ImageHash
 tzlocal
@@ -41,7 +40,6 @@ pycryptodome
 zipp
 ply
 pymongo
-matplotlib
 python-decouple
 anyio
 pyproj
@@ -63,6 +61,8 @@ requests
 google-auth
 pycparser
 Pygments
+dash
+Babel
 google-api-core
 pydantic-core
 python-dateutil
@@ -79,6 +79,8 @@ pandas
 deprecation
 urllib3
 shapely
+dash-core-components
+dash-html-components
 geographiclib
 googleapis-common-protos
 streamlit
@@ -89,11 +91,14 @@ scipy
 async-generator
 multimethod
 fiona
+ansi2html
 blinker
+nest-asyncio
 aiortc
 google-crc32c
 kiwisolver
 PyWavelets
+retrying
 outcome
 sniffio
 click-plugins
@@ -146,3 +151,4 @@ google-auth-httplib2
 pytz-deprecation-shim
 streamlit-modal
 streamlit-local-storage
+format-currency
