--- a/requirements.txt
+++ b/requirements.txt
@@ -1,156 +1,153 @@
-certifi
-pytz
-tzdata
-setuptools
-base64
-xlsxwriter
-cryptography
-pyOpenSSL
-pip
-packaging
-attrs
-rich
-pyarrow
-pyee
-av
-Pillow
-tenacity
-click
-importlib-metadata
-tornado
-PyYAML
-plotly
-cachetools
+aioice
+aiortc
 altair
-smmap
-dash-table
-tqdm
-fonttools
-protobuf
-jsonschema
-beautifulsoup4
-lxml
-rsa
-typing-extensions
-ImageHash
-tzlocal
-oauth2client
-uritemplate
-gitdb
-bcrypt
-pycryptodome
-zipp
-ply
-pymongo
-python-decouple
+annotated-types
+ansi2html
 anyio
-pyproj
-idna
-stone
-charset-normalizer
-pandas-profiling
-GitPython
-Jinja2
-openpyxl
-pyparsing
-networkx
-werkzeug
 asks
-flask
-watchdog
-google-api-python-client
-requests
-google-auth
-pycparser
-Pygments
-dash
+async-generator
+attrs
+av
 Babel
-google-api-core
-pydantic-core
-python-dateutil
-PyJWT
-soupsieve
-dnspython
-pydantic
-sortedcontainers
-geopy
-markdown-it-py
-MarkupSafe
-itsdangerous
-pandas
-deprecation
-urllib3
-shapely
+bcrypt
+beautifulsoup4
+blinker
+branca
+cachetools
+certifi
+cffi
+charset-normalizer
+click
+click-plugins
+cligj
+colorama
+contourpy
+cryptography
+cycler
+dash
 dash-core-components
 dash-html-components
-geographiclib
-googleapis-common-protos
-streamlit
-numpy
-cffi
-six
-scipy
-async-generator
-multimethod
-fiona
-ansi2html
-blinker
-nest-asyncio
-aiortc
-google-crc32c
-kiwisolver
-PyWavelets
-retrying
-outcome
-sniffio
-click-plugins
-contourpy
-joblib
-et-xmlfile
-mega.py
-streamlit-ws-localstorage
-pathlib
-Pympler
-python-dotenv
-streamlit-webrtc
-referencing
-trio
-httplib2
-validators
-pyrsistent
-geopandas
-folium
-h11
-seaborn
-phik
-cycler
-toolz
-rpds-py
-toml
-aioice
-pydeck
-pylibsrtp
-visions
-cligj
-Flask-Login
+dash-table
+deprecation
+dnspython
 docopt
-annotated-types
-branca
-missingno
-pyasn1
-pipreqs
-colorama
-streamlit-aggrid
-pyasn1-modules
-ifaddr
-tangled-up-in-unicode
+et-xmlfile
 extra-streamlit-components
-htmlmin
-yarg
-jsonschema-specifications
-mdurl
-google-auth-httplib2
-pytz-deprecation-shim
-streamlit-modal
-streamlit-local-storage
+fiona
+Flask
+Flask-Login
+folium
+fonttools
 format-currency
+geographiclib
+geopandas
+geopy
+gitdb
+GitPython
+google-api-core
+google-api-python-client
+google-auth
+google-auth-httplib2
+google-crc32c
+googleapis-common-protos
+h11
+htmlmin
+httplib2
+idna
+ifaddr
+ImageHash
+importlib-metadata
+itsdangerous
+Jinja2
+joblib
+jsonschema
+jsonschema-specifications
+kiwisolver
+lxml
+markdown-it-py
+MarkupSafe
+mdurl
+mega.py
+missingno
+multimethod
+nest-asyncio
+networkx
+numpy
+oauth2client
+openpyxl
+outcome
+packaging
+pandas
+pandas-profiling
+pathlib
+phik
+Pillow
+pipreqs
+plotly
+ply
+protobuf
+pyarrow
+pyasn1
+pyasn1-modules
+pycparser
+pycryptodome
+pydantic
+pydantic_core
+pydeck
+pyee
+Pygments
+PyJWT
+pylibsrtp
+pymongo
+Pympler
+pyOpenSSL
+pyparsing
+pyproj
+pyrsistent
+python-dateutil
+python-decouple
+python-dotenv
+pytz
+pytz-deprecation-shim
+PyWavelets
+PyYAML
+referencing
+requests
+retrying
+rich
+rpds-py
+rsa
+scipy
+seaborn
+shapely
+six
+smmap
+sniffio
+sortedcontainers
+soupsieve
+stone
+streamlit
+streamlit-aggrid
+streamlit-local-storage
+streamlit-modal
+streamlit-webrtc
+streamlit-ws-localstorage
+tangled-up-in-unicode
+tenacity
+toml
+toolz
+tornado
+tqdm
+trio
+typing_extensions
+tzdata
+tzlocal
+uritemplate
+urllib3
+validators
+visions
+watchdog
+Werkzeug
+XlsxWriter
+yarg
+zipp
