--- a/requirements.txt
+++ b/requirements.txt
@@ -1,167 +1,145 @@
-aioice
-aiortc
-altair
-annotated-types
-ansi2html
-anyio
-asks
-aspose-pdf
-async-generator
-attrs
-av
-Babel
-bcrypt
-beautifulsoup4
-blinker
-branca
-Brotli
-cachetools
 certifi
-cffi
-chardet
-charset-normalizer
-click
-click-plugins
-cligj
-colorama
-contourpy
+pytz
+tzdata
+setuptools
 cryptography
-cssselect2
-cycler
-dash
-dash-core-components
-dash-html-components
-dash-table
-deprecation
-dnspython
-docopt
-et-xmlfile
-extra-streamlit-components
-fiona
-Flask
-Flask-Login
-folium
-fonttools
-format-currency
-geographiclib
-geopandas
-geopy
-gitdb
-GitPython
-google-api-core
-google-api-python-client
-google-auth
-google-auth-httplib2
-google-crc32c
-googleapis-common-protos
-h11
-html5lib
-htmlmin
-httplib2
-idna
-ifaddr
-ImageHash
-imgkit
+pyOpenSSL
+pip
+packaging
+attrs
+rich
+pyarrow
+pyee
+av
+Pillow
+click
 importlib-metadata
-itsdangerous
-Jinja2
-joblib
+tornado
+PyYAML
+cachetools
+tenacity
+altair
+smmap
+tqdm
+fonttools
+protobuf
 jsonschema
-jsonschema-specifications
-kiwisolver
+beautifulsoup4
 lxml
+rsa
+typing-extensions
+ImageHash
+tzlocal
+oauth2client
+uritemplate
+gitdb
+bcrypt
+pycryptodome
+zipp
+ply
+pymongo
+matplotlib
+python-decouple
+anyio
+pyproj
+idna
+stone
+charset-normalizer
+pandas-profiling
+GitPython
+Jinja2
+openpyxl
+pyparsing
+networkx
+werkzeug
+asks
+flask
+watchdog
+google-api-python-client
+requests
+google-auth
+pycparser
+Pygments
+google-api-core
+pydantic-core
+python-dateutil
+PyJWT
+soupsieve
+dnspython
+pydantic
+sortedcontainers
+geopy
 markdown-it-py
 MarkupSafe
-mdurl
-mega.py
-missingno
-multimethod
-nest-asyncio
-networkx
-numpy
-oauth2client
-openpyxl
-outcome
-packaging
+itsdangerous
 pandas
-pandas-profiling
-pathlib
-pdfkit
-phik
-Pillow
-pipreqs
-plotly
-ply
-protobuf
-pyarrow
-pyasn1
-pyasn1-modules
-pycparser
-pycryptodome
-pydantic
-pydantic_core
-pydeck
-pydyf
-pyee
-Pygments
-PyJWT
-pylibsrtp
-pymongo
-Pympler
-pyOpenSSL
-pyparsing
-pyphen
-pyproj
-pyrsistent
-python-dateutil
-python-decouple
-python-dotenv
-pytz
-pytz-deprecation-shim
-PyWavelets
-PyYAML
-referencing
-reportlab
-requests
-retrying
-rich
-rsa
-scipy
-seaborn
-shapely
-six
-smmap
-sniffio
-sortedcontainers
-soupsieve
-stone
-streamlit
-streamlit-aggrid
-streamlit-local-storage
-streamlit-modal
-streamlit-webrtc
-streamlit-ws-localstorage
-tangled-up-in-unicode
-tenacity
-tinycss2
-toml
-toolz
-tornado
-tqdm
-trio
-typing_extensions
-tzdata
-tzlocal
-uritemplate
+deprecation
 urllib3
+shapely
+geographiclib
+googleapis-common-protos
+streamlit
+numpy
+cffi
+six
+scipy
+async-generator
+multimethod
+fiona
+blinker
+aiortc
+google-crc32c
+kiwisolver
+PyWavelets
+outcome
+sniffio
+click-plugins
+contourpy
+joblib
+et-xmlfile
+mega.py
+streamlit-ws-localstorage
+pathlib
+Pympler
+python-dotenv
+streamlit-webrtc
+referencing
+trio
+httplib2
 validators
+pyrsistent
+geopandas
+folium
+h11
+seaborn
+phik
+cycler
+toolz
+rpds-py
+toml
+aioice
+pydeck
+pylibsrtp
 visions
-watchdog
-weasyprint
-webencodings
-Werkzeug
-wkhtmltopdf
-XlsxWriter
+cligj
+Flask-Login
+docopt
+annotated-types
+branca
+missingno
+pyasn1
+pipreqs
+colorama
+streamlit-aggrid
+pyasn1-modules
+ifaddr
+tangled-up-in-unicode
+extra-streamlit-components
+htmlmin
 yarg
-zipp
-zopfli
+jsonschema-specifications
+mdurl
+google-auth-httplib2
+pytz-deprecation-shim
+streamlit-modal
+streamlit-local-storage
