--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,169 @@
-pytz
-Pillow
-pymongo
-matplotlib
-openpyxl
-requests
-geopy
-pandas
-streamlit
-mega.py
-streamlit-ws-localstorage
-python-dotenv
-geopandas
+aioice
+aiortc
+altair
+annotated-types
+ansi2html
+anyio
+asks
+aspose-pdf
+async-generator
+attrs
+av
+Babel
+bcrypt
+beautifulsoup4
+blinker
+branca
+Brotli
+cachetools
+certifi
+cffi
+chardet
+charset-normalizer
+click
+click-plugins
+cligj
+colorama
+contourpy
+cryptography
+cssselect2
+cycler
+dash
+dash-core-components
+dash-html-components
+dash-table
+deprecation
+dnspython
+docopt
+et-xmlfile
+extra-streamlit-components
+fiona
+Flask
+Flask-Login
 folium
-babel
+fonttools
+format-currency
+geographiclib
+geopandas
+geopy
+gitdb
+GitPython
+google-api-core
+google-api-python-client
+google-auth
+google-auth-httplib2
+google-crc32c
+googleapis-common-protos
+h11
+html5lib
+htmlmin
+httplib2
+idna
+ifaddr
+ImageHash
+imgkit
+importlib-metadata
+itsdangerous
+Jinja2
+joblib
+jsonschema
+jsonschema-specifications
+kiwisolver
+lxml
+markdown-it-py
+MarkupSafe
+mdurl
+mega.py
+missingno
+multimethod
+nest-asyncio
+networkx
+numpy
+oauth2client
+openpyxl
+outcome
+packaging
+pandas
+pandas-profiling
+pathlib
+pdfkit
+phik
+Pillow
+pipreqs
+plotly
+ply
+protobuf
+pyarrow
+pyasn1
+pyasn1-modules
+pycparser
+pycryptodome
+pydantic
+pydantic_core
+pydeck
+pydyf
+pyee
+Pygments
+PyJWT
+pylibsrtp
+pymongo
+Pympler
+pyOpenSSL
+pyparsing
+pyphen
+pyproj
+pyrsistent
+python-dateutil
+python-decouple
+python-dotenv
+pytz
+pytz-deprecation-shim
+PyWavelets
+pywin32
+PyYAML
+referencing
+reportlab
+requests
+retrying
+rich
+rpds-py
+rsa
+scipy
+seaborn
+shapely
+six
+smmap
+sniffio
+sortedcontainers
+soupsieve
+stone
+streamlit
 streamlit-aggrid
 streamlit-local-storage
+streamlit-modal
+streamlit-webrtc
+streamlit-ws-localstorage
+tangled-up-in-unicode
+tenacity
+tinycss2
+toml
+toolz
+tornado
+tqdm
+trio
+typing_extensions
+tzdata
+tzlocal
+uritemplate
+urllib3
+validators
+visions
+watchdog
+weasyprint
+webencodings
+Werkzeug
+wkhtmltopdf
+XlsxWriter
+yarg
+zipp
+zopfli
