--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ annotated-types
 ansi2html
 anyio
 asks
+aspose-pdf
 async-generator
 attrs
 av
@@ -13,9 +14,11 @@ bcrypt
 beautifulsoup4
 blinker
 branca
+Brotli
 cachetools
 certifi
 cffi
+chardet
 charset-normalizer
 click
 click-plugins
@@ -23,6 +26,7 @@ cligj
 colorama
 contourpy
 cryptography
+cssselect2
 cycler
 dash
 dash-core-components
@@ -51,11 +55,13 @@ google-auth-httplib2
 google-crc32c
 googleapis-common-protos
 h11
+html5lib
 htmlmin
 httplib2
 idna
 ifaddr
 ImageHash
+imgkit
 importlib-metadata
 itsdangerous
 Jinja2
@@ -80,6 +86,7 @@ packaging
 pandas
 pandas-profiling
 pathlib
+pdfkit
 phik
 Pillow
 pipreqs
@@ -94,6 +101,7 @@ pycryptodome
 pydantic
 pydantic_core
 pydeck
+pydyf
 pyee
 Pygments
 PyJWT
@@ -102,6 +110,7 @@ pymongo
 Pympler
 pyOpenSSL
 pyparsing
+pyphen
 pyproj
 pyrsistent
 python-dateutil
@@ -110,8 +119,10 @@ python-dotenv
 pytz
 pytz-deprecation-shim
 PyWavelets
+pywin32
 PyYAML
 referencing
+reportlab
 requests
 retrying
 rich
@@ -126,7 +137,6 @@ sniffio
 sortedcontainers
 soupsieve
 stone
-st_aggrid
 streamlit
 streamlit-aggrid
 streamlit-local-storage
@@ -135,6 +145,7 @@ streamlit-webrtc
 streamlit-ws-localstorage
 tangled-up-in-unicode
 tenacity
+tinycss2
 toml
 toolz
 tornado
@@ -148,7 +159,11 @@ urllib3
 validators
 visions
 watchdog
+weasyprint
+webencodings
 Werkzeug
+wkhtmltopdf
 XlsxWriter
 yarg
 zipp
+zopfli
