--- a/requirements.txt
+++ b/requirements.txt
@@ -1,167 +1,168 @@
-aioice==0.9.0
-aiortc==1.5.0
-altair==5.1.2
-annotated-types==0.6.0
-ansi2html==1.9.1
-anyio==3.7.1
-asks==3.0.0
-aspose-pdf==23.12.0
-async-generator==1.10
-attrs==23.1.0
-av==10.0.0
-Babel==2.14.0
-bcrypt==4.0.1
-beautifulsoup4==4.12.2
-blinker==1.6.3
-branca==0.6.0
-Brotli==1.1.0
-cachetools==5.3.1
-certifi==2023.7.22
-cffi==1.16.0
-chardet==5.2.0
-charset-normalizer==3.3.0
-click==8.1.7
-click-plugins==1.1.1
-cligj==0.7.2
-colorama==0.4.6
-contourpy==1.1.1
-cryptography==41.0.5
-cssselect2==0.7.0
-cycler==0.12.1
-dash==2.14.2
-dash-core-components==2.0.0
-dash-html-components==2.0.0
-dash-table==5.0.0
-deprecation==2.1.0
-dnspython==2.4.2
-docopt==0.6.2
-et-xmlfile==1.1.0
-extra-streamlit-components==0.1.60
-fiona==1.9.5
-Flask==3.0.0
-Flask-Login==0.6.3
-folium==0.14.0
-fonttools==4.43.1
-format-currency==0.0.3
-geographiclib==2.0
-geopandas==0.14.0
-geopy==2.3.0
-gitdb==4.0.10
-GitPython==3.1.37
-google-api-core==2.12.0
-google-api-python-client==2.105.0
-google-auth==2.23.3
-google-auth-httplib2==0.1.1
-google-crc32c==1.5.0
-googleapis-common-protos==1.61.0
-h11==0.14.0
-html5lib==1.1
-htmlmin==0.1.12
-httplib2==0.22.0
-idna==3.4
-ifaddr==0.2.0
-ImageHash==4.3.1
-imgkit==1.2.3
-importlib-metadata==6.7.0
-itsdangerous==2.1.2
-Jinja2==3.1.2
-joblib==1.1.1
-jsonschema==4.17.3
-jsonschema-specifications==0.1.3
-kiwisolver==1.4.5
-lxml==4.9.3
-markdown-it-py==2.2.0
-MarkupSafe==2.1.3
-mdurl==0.1.2
-mega.py==1.0.8
-missingno==0.5.2
-multimethod==1.10
-nest-asyncio==1.5.8
-networkx==3.1
-numpy==1.24.0rc2
-oauth2client==4.1.3
-openpyxl==3.1.2
-outcome==1.3.0.post0
-packaging==23.2
-pandas==2.1.1
-pandas-profiling==3.2.0
-pathlib==1.0.1
-pdfkit==1.0.0
-phik==0.12.3
-Pillow==9.5.0
-pipreqs==0.4.13
-plotly==5.18.0
-ply==3.11
-protobuf==4.24.4
-pyarrow==13.0.0
-pyasn1==0.5.0
-pyasn1-modules==0.3.0
-pycparser==2.21
-pycryptodome==3.19.0
-pydantic==2.4.2
-pydantic_core==2.10.1
-pydeck==0.8.1b0
-pydyf==0.8.0
-pyee==11.0.1
-Pygments==2.16.1
-PyJWT==2.8.0
-pylibsrtp==0.8.0
-pymongo==3.11.0
-Pympler==1.0.1
-pyOpenSSL==23.3.0
-pyparsing==3.1.1
-pyphen==0.14.0
-pyproj==3.6.1
-pyrsistent==0.19.3
-python-dateutil==2.8.2
-python-decouple==3.8
-python-dotenv==1.0.0
-pytz==2023.3.post1
-pytz-deprecation-shim==0.1.0.post0
-PyWavelets==1.4.1
-PyYAML==6.0.1
-referencing==0.30.2
-reportlab==4.0.9
-requests==2.31.0
-retrying==1.3.4
-rich==13.6.0
-rpds-py==0.10.4
-rsa==4.9
-scipy==1.11.3
-seaborn==0.13.0
-shapely==2.0.2
-six==1.16.0
-smmap==5.0.1
-sniffio==1.3.0
-sortedcontainers==2.4.0
-soupsieve==2.5
-stone==3.3.1
-streamlit==1.28.0
-streamlit-aggrid==0.3.4.post3
-streamlit-local-storage==0.0.12
-streamlit-modal==0.1.0
-streamlit-webrtc==0.47.1
-streamlit-ws-localstorage==1.0.5
-tangled-up-in-unicode==0.2.0
-tinycss2==1.2.1
-toml==0.10.2
-toolz==0.12.0
-tornado==6.3.3
-tqdm==4.66.1
-trio==0.23.1
-typing_extensions==4.8.0
-tzdata==2023.3
-tzlocal==4.3.1
-uritemplate==4.1.1
-urllib3==2.0.6
-validators==0.22.0
-visions==0.7.4
-watchdog==3.0.0
-weasyprint==60.2
-webencodings==0.5.1
-Werkzeug==3.0.1
-wkhtmltopdf==0.2
-XlsxWriter==3.1.9
-yarg==0.1.9
-zipp==3.17.0
-zopfli==0.2.3
+aioice
+aiortc
+altair
+annotated-types
+ansi2html
+anyio
+asks
+aspose-pdf
+async-generator
+attrs
+av
+Babel
+bcrypt
+beautifulsoup4
+blinker
+branca
+Brotli
+cachetools
+certifi
+cffi
+chardet
+charset-normalizer
+click
+click-plugins
+cligj
+colorama
+contourpy
+cryptography
+cssselect2
+cycler
+dash
+dash-core-components
+dash-html-components
+dash-table
+deprecation
+dnspython
+docopt
+et-xmlfile
+extra-streamlit-components
+fiona
+Flask
+Flask-Login
+folium
+fonttools
+format-currency
+geographiclib
+geopandas
+geopy
+gitdb
+GitPython
+google-api-core
+google-api-python-client
+google-auth
+google-auth-httplib2
+google-crc32c
+googleapis-common-protos
+h11
+html5lib
+htmlmin
+httplib2
+idna
+ifaddr
+ImageHash
+imgkit
+importlib-metadata
+itsdangerous
+Jinja2
+joblib
+jsonschema
+jsonschema-specifications
+kiwisolver
+lxml
+markdown-it-py
+MarkupSafe
+mdurl
+mega.py
+missingno
+multimethod
+nest-asyncio
+networkx
+numpy
+oauth2client
+openpyxl
+outcome
+packaging
+pandas
+pandas-profiling
+pathlib
+pdfkit
+phik
+Pillow
+pipreqs
+plotly
+ply
+protobuf
+pyarrow
+pyasn1
+pyasn1-modules
+pycparser
+pycryptodome
+pydantic
+pydantic_core
+pydeck
+pydyf
+pyee
+Pygments
+PyJWT
+pylibsrtp
+pymongo
+Pympler
+pyOpenSSL
+pyparsing
+pyphen
+pyproj
+pyrsistent
+python-dateutil
+python-decouple
+python-dotenv
+pytz
+pytz-deprecation-shim
+PyWavelets
+PyYAML
+referencing
+reportlab
+requests
+retrying
+rich
+rpds-py
+rsa
+scipy
+seaborn
+shapely
+six
+smmap
+sniffio
+sortedcontainers
+soupsieve
+stone
+streamlit
+streamlit-aggrid
+streamlit-local-storage
+streamlit-modal
+streamlit-webrtc
+streamlit-ws-localstorage
+tangled-up-in-unicode
+tenacity
+tinycss2
+toml
+toolz
+tornado
+tqdm
+trio
+typing_extensions
+tzdata
+tzlocal
+uritemplate
+urllib3
+validators
+visions
+watchdog
+weasyprint
+webencodings
+Werkzeug
+wkhtmltopdf
+XlsxWriter
+yarg
+zipp
+zopfli
