--- a/requirements.txt
+++ b/requirements.txt
@@ -1,153 +1,63 @@
-aioice
-aiortc
-altair
-annotated-types
-ansi2html
-anyio
-asks
-async-generator
-attrs
-av
-Babel
-bcrypt
-beautifulsoup4
-blinker
-branca
-cachetools
-certifi
-cffi
-charset-normalizer
-click
-click-plugins
-cligj
-colorama
-contourpy
-cryptography
-cycler
-dash
-dash-core-components
-dash-html-components
-dash-table
-deprecation
-dnspython
-docopt
-et-xmlfile
-extra-streamlit-components
-fiona
-Flask
-Flask-Login
-folium
-fonttools
-format-currency
-geographiclib
-geopandas
-geopy
-gitdb
-GitPython
-google-api-core
-google-api-python-client
-google-auth
-google-auth-httplib2
-google-crc32c
-googleapis-common-protos
-h11
-htmlmin
-httplib2
-idna
-ifaddr
-ImageHash
-importlib-metadata
-itsdangerous
-Jinja2
-joblib
-jsonschema
-jsonschema-specifications
-kiwisolver
-lxml
-markdown-it-py
-MarkupSafe
-mdurl
-mega.py
-missingno
-multimethod
-nest-asyncio
-networkx
-numpy
-oauth2client
-openpyxl
-outcome
-packaging
-pandas
-pandas-profiling
-pathlib
-phik
-Pillow
-pipreqs
-plotly
-ply
-protobuf
-pyarrow
-pyasn1
-pyasn1-modules
-pycparser
-pycryptodome
-pydantic
-pydantic_core
-pydeck
-pyee
-Pygments
-PyJWT
-pylibsrtp
-pymongo
-Pympler
-pyOpenSSL
-pyparsing
-pyproj
-pyrsistent
-python-dateutil
-python-decouple
-python-dotenv
-pytz
-pytz-deprecation-shim
-PyWavelets
-PyYAML
-referencing
-requests
-retrying
-rich
-rpds-py
-rsa
-scipy
-seaborn
-shapely
-six
-smmap
-sniffio
-sortedcontainers
-soupsieve
-stone
-streamlit
-streamlit-aggrid
-streamlit-local-storage
-streamlit-modal
-streamlit-webrtc
-streamlit-ws-localstorage
-tangled-up-in-unicode
-tenacity
-toml
-toolz
-tornado
-tqdm
-trio
-typing_extensions
-tzdata
-tzlocal
-uritemplate
-urllib3
-validators
-visions
-watchdog
-Werkzeug
-XlsxWriter
-yarg
-zipp
+altair==5.3.0
+attrs==23.2.0
+Babel==2.14.0
+blinker==1.7.0
+branca==0.7.1
+cachetools==5.3.3
+certifi==2024.2.2
+charset-normalizer==3.3.2
+click==8.1.7
+click-plugins==1.1.1
+cligj==0.7.2
+colorama==0.4.6
+dnspython==2.6.1
+et-xmlfile==1.1.0
+fiona==1.9.6
+folium==0.15.0
+geopandas==0.14.0
+gitdb==4.0.11
+GitPython==3.1.43
+idna==3.6
+Jinja2==3.1.3
+jsonschema==4.21.1
+jsonschema-specifications==2023.12.1
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+mdurl==0.1.2
+mega.py==1.0.7
+numpy==1.26.4
+openpyxl==3.1.2
+packaging==23.2
+pandas==2.2.1
+pathlib==1.0.1
+pillow==10.3.0
+plotly==5.15.0
+protobuf==4.25.3
+pyarrow==15.0.2
+pycryptodome==3.20.0
+pydeck==0.8.1b0
+Pygments==2.17.2
+pymongo==4.6.3
+pyproj==3.6.1
+python-dateutil==2.9.0.post0
+python-decouple==3.8
+pytz==2024.1
+referencing==0.34.0
+requests==2.31.0
+rich==13.7.1
+rpds-py==0.18.0
+shapely==2.0.3
+six==1.16.0
+smmap==5.0.1
+streamlit==1.32.2
+streamlit-aggrid==0.3.4.post3
+streamlit-local-storage==0.0.12
+tenacity==8.2.3
+toml==0.10.2
+toolz==0.12.1
+tornado==6.4
+typing_extensions==4.10.0
+tzdata==2024.1
+urllib3==2.2.1
+watchdog==4.0.0
+XlsxWriter==3.2.0
